Add session authentication

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,15 @@
 ktor {
+    deployment {
+        port = 8080
+    }
     database {
-        url = "jdbc:mariadb://localhost:3306/yourcitydb"
+        url = ${DATABASE_URL}
+    }
+    sessions{
+        secretSignKey = ${SECRET_SIGN_KEY}
+        secretEncryptKey = ${SECRET_ENCRYPT_KEY}
+    }
+    application {
+        modules = [ com.example.ApplicationKt.module ]
     }
 }
